Update main to output generated at 328ae90

--- a/trains/stations/A/index.html
+++ b/trains/stations/A/index.html
@@ -251,6 +251,13 @@
         >
           <img alt="Aston" src="/images/trains/stations/ast.webp" />
         </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Ayr railway station"
+        >
+          <img alt="Ayr" src="/images/trains/stations/ayr.webp" />
+        </a>
       </div>
 
       <div class="counter">
