--- a/trains/stations/B/index.html
+++ b/trains/stations/B/index.html
@@ -195,9 +195,23 @@
       <div class="stations">
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Balloch railway station"
+        >
+          <img alt="Balloch" src="/images/trains/stations/bhc.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Banbury railway station"
         >
           <img alt="Banbury" src="/images/trains/stations/ban.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Basingstoke railway station"
+        >
+          <img alt="Basingstoke" src="/images/trains/stations/bsk.webp" />
         </a>
 
         <a
@@ -295,9 +309,23 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Bristol Parkway railway station"
+        >
+          <img alt="Bristol Parkway" src="/images/trains/stations/bpw.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Brockenhurst railway station"
         >
           <img alt="Brockenhurst" src="/images/trains/stations/bcu.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Burton-on-Trent railway station"
+        >
+          <img alt="Burton-on-Trent" src="/images/trains/stations/but.webp" />
         </a>
 
         <a
