--- a/trains/stations/C/index.html
+++ b/trains/stations/C/index.html
@@ -293,6 +293,13 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Coventry Arena railway station"
+        >
+          <img alt="Coventry Arena" src="/images/trains/stations/caa.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Cradley Heath railway station"
         >
           <img alt="Cradley Heath" src="/images/trains/stations/cra.webp" />
