--- a/trains/stations/D/index.html
+++ b/trains/stations/D/index.html
@@ -216,6 +216,20 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Dorridge railway station"
+        >
+          <img alt="Dorridge" src="/images/trains/stations/ddg.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Droitwich Spa railway station"
+        >
+          <img alt="Droitwich Spa" src="/images/trains/stations/dtw.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Duddeston railway station"
         >
           <img alt="Duddeston" src="/images/trains/stations/dud.webp" />
