--- a/trains/stations/H/index.html
+++ b/trains/stations/H/index.html
@@ -258,6 +258,13 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Holyhead railway station"
+        >
+          <img alt="Holyhead" src="/images/trains/stations/hhd.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Honeybourne railway station"
         >
           <img alt="Honeybourne" src="/images/trains/stations/hyb.webp" />
