--- a/trains/stations/L/index.html
+++ b/trains/stations/L/index.html
@@ -202,6 +202,20 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Langley Green railway station"
+        >
+          <img alt="Langley Green" src="/images/trains/stations/lgg.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Lapworth railway station"
+        >
+          <img alt="Lapworth" src="/images/trains/stations/lpw.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Lea Hall railway station"
         >
           <img alt="Lea Hall" src="/images/trains/stations/leh.webp" />
@@ -230,6 +244,13 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Leicester railway station"
+        >
+          <img alt="Leicester" src="/images/trains/stations/lei.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Lichfield City railway station"
         >
           <img alt="Lichfield City" src="/images/trains/stations/lic.webp" />
@@ -254,6 +275,16 @@
           href="https://wikipedia.org/wiki/London Marylebone railway station"
         >
           <img alt="London Marylebone" src="/images/trains/stations/myb.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/London St Pancras International railway station"
+        >
+          <img
+            alt="London St Pancras International"
+            src="/images/trains/stations/stp.webp"
+          />
         </a>
 
         <a
