--- a/trains/stations/T/index.html
+++ b/trains/stations/T/index.html
@@ -205,6 +205,13 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Tamworth railway station"
+        >
+          <img alt="Tamworth" src="/images/trains/stations/tam.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Telford Central railway station"
         >
           <img alt="Telford Central" src="/images/trains/stations/tfc.webp" />
