--- a/trains/stations/W/index.html
+++ b/trains/stations/W/index.html
@@ -223,9 +223,40 @@
 
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Wellington railway station"
+        >
+          <img alt="Wellington" src="/images/trains/stations/wln.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Whitehaven railway station"
         >
           <img alt="Whitehaven" src="/images/trains/stations/wth.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Widney Manor railway station"
+        >
+          <img alt="Widney Manor" src="/images/trains/stations/wmr.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Wigan North Western railway station"
+        >
+          <img
+            alt="Wigan North Western"
+            src="/images/trains/stations/wgn.webp"
+          />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Wigan Wallgate railway station"
+        >
+          <img alt="Wigan Wallgate" src="/images/trains/stations/wgw.webp" />
         </a>
 
         <a
