--- a/trains/stations/S/index.html
+++ b/trains/stations/S/index.html
@@ -195,6 +195,13 @@
       <div class="stations">
         <a
           class="station-img"
+          href="https://wikipedia.org/wiki/Salford Central railway station"
+        >
+          <img alt="Salford Central" src="/images/trains/stations/sfd.webp" />
+        </a>
+
+        <a
+          class="station-img"
           href="https://wikipedia.org/wiki/Sandwell and Dudley railway station"
         >
           <img
@@ -270,6 +277,13 @@
           href="https://wikipedia.org/wiki/Spring Road railway station"
         >
           <img alt="Spring Road" src="/images/trains/stations/sri.webp" />
+        </a>
+
+        <a
+          class="station-img"
+          href="https://wikipedia.org/wiki/Solihull railway station"
+        >
+          <img alt="Solihull" src="/images/trains/stations/sol.webp" />
         </a>
 
         <a
