--- a/papers/index.html
+++ b/papers/index.html
@@ -86,6 +86,67 @@
     <main id="text" class="content container wide">
       <div class="card">
         <span class="paper-title">
+          Foundations of Digital Circuits: Denotation, Operational, and
+          Algebraic Semantics</span
+        >
+        <div class="paper-authors">
+          <span class="author author-me">George Kaye</span>
+        </div>
+        <div class="paper-details">PhD thesis, University of Birmingham</div>
+        <div id="thesis-abstract" class="paper-abstract">
+          This thesis details the culmination of a project to define a fully
+          compositional theory of synchronous sequential circuits built from
+          primitive components, motivated by applying techniques successfully
+          used in programming languages to hardware. The first part of the
+          thesis defines the syntactic foundations required to create sequential
+          circuit morphisms, and then builds three different semantic theories
+          on top of this: denotational, operational and algebraic. We
+          characterise the denotational semantics of sequential circuits as
+          certain causal stream functions, as well as providing a link to
+          existing circuit methodologies by mapping between circuit morphisms,
+          stream functions and Mealy machines. The operational semantics is
+          defined as a strategy for applying some global transformations
+          followed by local reductions in order to demonstrate how a circuit
+          processes a value, leading to a notion of observational equivalence.
+          The algebraic semantics consists of equations for bringing circuits
+          into a pseudo-normal form, and then encoding between different state
+          sets. This part of the thesis concludes with a discussion of some
+          novel applications, such as those for using partial evaluation for
+          digital circuits. While mathematically rigorous, the categorical
+          string diagram formalism is not suited for reasoning computationally.
+          The second part of this thesis details an extension of existing work
+          on string diagram rewriting with hypergraphs so that it is compatible
+          with the traced comonoid structure present in the category of digital
+          circuits. We identify the properties that characterise cospans of
+          hypergraphs corresponding to traced comonoid terms, and demonstrate
+          how to identify rewriting contexts valid for rewriting modulo traced
+          comonoid structure. We apply the graph rewriting framework to fixed
+          point operators as well as the operational semantics from the first
+          part, and present a new hardware description language based on these
+          theoretical developments.
+        </div>
+        <div class="talk-buttons">
+          <div>
+            <span class="link-button"
+              ><a
+                href="/files/papers/thesis.pdf"
+                title="PDF version of 'Foundations of Digital Circuits: Denotation, Operational, and Algebraic Semantics'"
+                >pdf</a
+              ></span
+            >
+            •
+            <span class="link-button"
+              ><a
+                href="/files/papers/thesis.bib.txt"
+                title="Bibtex entry for 'Foundations of Digital Circuits: Denotation, Operational, and Algebraic Semantics'"
+                >bibtex</a
+              ></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <span class="paper-title">
           Rewriting modulo traced comonoid structure</span
         >
         <div class="paper-authors">
@@ -98,7 +159,7 @@
           >, <span class="author author-me">George Kaye</span>
         </div>
         <div class="paper-details">FSCD 2023</div>
-        <div id="undefined-abstract" class="paper-abstract">
+        <div id="rewriting-traced-comonoid-abstract" class="paper-abstract">
           We adapt the existing work on rewriting string diagrams using
           hypergraphs in order to apply it to settings with a traced comonoid
           structure, which happens to be where we model digital circuits.
@@ -168,7 +229,7 @@
           >
         </div>
         <div class="paper-details">Arxiv preprint</div>
-        <div id="undefined-abstract" class="paper-abstract">
+        <div id="compositional-circuits-abstract" class="paper-abstract">
           We model digital circuits with delay and feedback as morphisms in a
           symmetric traced monoidal category, formalise their semantics as
           stream functions with certain properties, and present equational
@@ -218,7 +279,7 @@
           >
         </div>
         <div class="paper-details">Arxiv preprint</div>
-        <div id="undefined-abstract" class="paper-abstract">
+        <div id="rewriting-abstract" class="paper-abstract">
           We examine a variant of hypergraphs with the aim of creating a sound
           and complete graphical language for symmetric traced monoidal
           categories.
@@ -269,7 +330,7 @@
         <div class="paper-details">
           Masters dissertation (2019), University of Birmingham
         </div>
-        <div id="undefined-abstract" class="paper-abstract">
+        <div id="masters-abstract" class="paper-abstract">
           We detail the development of a set of tools to aid in the research of
           the topological properties of linear λ-terms when they are represented
           as 3-valent rooted maps.
