Update main to output generated at e24cd76

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         part of the Insurance Products Integration Development team at
         <a href="https://www.acturis.com/">Acturis Ltd</a>.
       </p>
+      <h3>The old times</h3>
       <p>
         From 2019 to 2024 I was a PhD student at the University of Birmingham,
         under the supervision of
@@ -116,21 +117,17 @@
           >Huawei Edinburgh Programming Languages Lab</a
         >.
       </p>
-      <h2>About me</h2>
+      <h3>Find out more</h3>
       <p>
-        When I'm not researching, I play the piano and go on adventures usually
-        involving trains, canals or both. I occasionally take photos of pretty
-        things and put them on
-        <a href="https://instagram.com/georgejkaye">Instagram</a>. If you want
-        something less pretty, here are some
-        <a href="/pictures">pictures of me</a>!
+        Want to contact me? Drop me an email at
+        <a href="mailto:georgejkaye@gmail.com">georgejkaye@gmail.com</a>. You
+        might also want to read <a href="/files/cv.pdf">my CV</a>.
       </p>
-      <p>You might want to read <a href="/files/cv.pdf">my CV</a>.</p>
-      <h2>Contact me</h2>
-      <p><a href="mailto:georgejkaye@gmail.com">georgejkaye@gmail.com</a></p>
       <h2>Contributing</h2>
       <p>
-        If you find a mistake, make an
+        The source of this website is available on
+        <a href="https://github.com/georgejkaye/georgejkaye.github.io">GitHub</a
+        >. If you find a mistake, make an
         <a href="https://github.com/georgejkaye/georgejkaye.github.io/issues"
           >issue</a
         >
@@ -189,6 +186,12 @@
             ><strong>Delay Repay Calculator</strong></a
           >
           Work out how much delay repay you'll get
+        </li>
+        <li>
+          <a href="https://transport.georgejkaye.com"
+            ><strong>Transport Tracker</strong></a
+          >
+          I like keeping track of my railway journeys
         </li>
       </ul>
       <p>
