Update main to output generated at 4612c83

--- a/papers/index.html
+++ b/papers/index.html
@@ -74,6 +74,74 @@
     <main id="text" class="content container wide">
       <div class="card">
         <span class="paper-title">
+          Rewriting Modulo Traced Comonoid Structure</span
+        >
+        <div class="paper-authors">
+          <span class="author"
+            ><a
+              href="https://www.cs.bham.ac.uk/~drg/"
+              title="Dan Ghica's personal webpage"
+              >Dan Ghica</a
+            ></span
+          >, <span class="author author-me">George Kaye</span>
+        </div>
+        <div class="paper-details">
+          Logical Methods in Computer Science, Volume 22, Issue 1
+        </div>
+        <div
+          id="rewriting-traced-comonoid-lmcs-abstract"
+          class="paper-abstract"
+        >
+          In this paper we adapt previous work on rewriting string diagrams
+          using hypergraphs to the case where the underlying category has a
+          traced comonoid structure, in which wires can be forked and the
+          outputs of a morphism can be connected to its input. Such a structure
+          is particularly interesting because any traced Cartesian (dataflow)
+          category has an underlying traced comonoid structure. We show that
+          certain subclasses of hypergraphs are fully complete for traced
+          comonoid categories: that is to say, every term in such a category has
+          a unique corresponding hypergraph up to isomorphism, and from every
+          hypergraph with the desired properties, a unique term in the category
+          can be retrieved up to the axioms of traced comonoid categories. We
+          also show how the framework of double pushout rewriting (DPO) can be
+          adapted for traced comonoid categories by characterising the valid
+          pushout complements for rewriting in our setting. We conclude by
+          presenting a case study in the form of recent work on an equational
+          theory for sequential circuits: circuits built from primitive logic
+          gates with delay and feedback. The graph rewriting framework allows
+          for the definition of an operational semantics for sequential
+          circuits.
+        </div>
+        <div class="talk-buttons">
+          <div>
+            <span class="link-button"
+              ><a
+                href="https://doi.org/10.46298/lmcs-22(1:2)2026"
+                title="Published version of 'Rewriting Modulo Traced Comonoid Structure'"
+                >paper</a
+              ></span
+            >
+            •
+            <span class="link-button"
+              ><a
+                href="/files/papers/lmcs-rewriting.pdf"
+                title="PDF of 'Rewriting Modulo Traced Comonoid Structure' (published version)"
+                >(pdf)</a
+              ></span
+            >
+            •
+            <span class="link-button"
+              ><a
+                href="/files/papers/rewriting-traced-comonoid-lmcs.bib.txt"
+                title="Bibtex entry for 'Rewriting Modulo Traced Comonoid Structure'"
+                >bibtex</a
+              ></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <span class="paper-title">
           Foundations of Digital Circuits: Denotation, Operational, and
           Algebraic Semantics</span
         >
